# personal-finance

./: .gitignore  pyproject.toml
notebooks/: dev.ipynb
pf/: io.py
