[tool.poetry]
name = "personal-finance"
version = "0.1.0"
description = ""
authors = ["p3rc3ptr0n"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numbers-parser = "^4.14.2"
pandas = "^2.2.3"
numpy = "^2.2.1"
langgraph = "^0.2.60"
langsmith = "^0.2.6"
langchain-openai = "^0.2.14"
plotly = "^5.24.1"
jupyterlab = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
